[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart402"
version = "0.4.0"
description = "Deterministic risk engine for AI agent payments via x402"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Roberto Moreno", email = "rob@smart402.com"},
]
keywords = ["x402", "ai-agents", "payments", "risk", "stablecoin", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
x402 = ["x402[evm,httpx]>=2.3.0,<3"]
all = ["x402[evm,httpx]>=2.3.0,<3"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.urls]
Homepage = "https://github.com/Falinkaz/smart402-python"
Documentation = "https://github.com/Falinkaz/smart402-python/blob/main/API.md"
Repository = "https://github.com/Falinkaz/smart402-python"
Issues = "https://github.com/Falinkaz/smart402-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["smart402*"]
